--- a/src/energy.tex
+++ b/src/energy.tex
@@ -263,17 +263,20 @@ In the CAM physical parameterizations a different definition of TE is used. Due 
 \label{eq:Ephys}
 \gi{E}_{phys} =\frac{1}{\Delta \mathcal{S}}\int_{\eta=0}^{\eta=1} \iint_\mathcal{S} \left( \frac{1}{g}\frac{\partial M^{(d)}}{\partial \eta^{(d)}} \right)\left(1+m^{(wv)}\right)\left[ \left(K+c_p^{(d)}T+\Phi_s\right)\right]dA d \eta^{(d)}.
 \end{equation}
-We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE as the {\em{energy consistent}} version.
+We note that earlier versions of CAM using the spectral transform dynamical core used $c_p$ of moist air. The adiabatic, frictionless equations of motion in the CAM-SE dynamical core can be made consistent with $E_{phys}$ by not including condensates in the mass/pressure field as well as energy conversion term in the thermodynamic equation and setting the heat capacity for moisture to $c_p^{(d)}$ \citep{T2011LNCSEb}. We refer to this version of CAM-SE {color{red}{combined with {\em{state-updating}} ({\tt{ftype=1}} physics-dynamics coupling}} as the {\em{energy consistent}} version {\color{red}{; i.e. the same continuous formula for energy is used in both dynamics and physics, and there are no physics-dynamics coupling errors}}.
 
-\subsection{{\color{red}{Some remarks on local total energy conservation}}}
-{\color{red}{[I think you missed an opportunity to remind the reader of the additional complexities of a moist atmosphere here. The development and discussion is currently entirely framed in term of the global integrals, but maybe you should say that there are local considerations at play also. Whenever an air parcel containing water undergoes a phase change its temperature should change, and its energy (enthalpy), and mass should not. When the air parcel gains or loses water via sedimentation or precipitation or via a fixer or borrower to maintain some physical property like positive definiteness, then it has implications for the mass and heat content of the parcel, and the heat capacity of the parcel. And that affects the energy and mass of the column, and that affects the global energy. So anything that changes these state variables locally has implications for the energy budget. I think you need these kind of statements to be able to say that the current model framework only tries to account for some of the terms in the energy and mass budget, and also treats only a subset of the heat capacities/latent heat of fusion and vaporization. So when surface pressure is fixed during a physical parameterization update but the water vapor is changed an inconsistency appears. If a clipper is used on vapor or condense water, that is a spurious source of water, but it is not accounted for in the thermodynamics, or through a surface flux. Etc. I think it is worth saying this kind of stuff before you get into the global integrals because it won't necessarily be obvious to the audience how for the example of figure 5, that clipping of cloud water will produce an energy source or sink. ]}}
+\subsection{{\color{red}{Some remarks on local energy conservation}}}
+{\color{red}{Although this paper focuses on global TE errors, it is important to note that energy errors occur locally. For example, whenever an air parcel containing water undergoes a phase change (in the parameterizations) its temperature and enthalpy (energy) should change but its mass should not. When the air parcel gains or loses water via sedimentation or precipitation (or via a fixer or borrower to maintain some physical property like positive definiteness), then it has implications for the mass and heat content, and heat capacity of the parcel. In turn, that affects the energy and mass of the column and thereby affects the global TE budget. So anything that changes these state variables locally has implications for the TE budget. 
+
+An example of an inconsistency in CAM physics is that surface pressure is held fixed during physical parameterization updates but water vapor, and hence surface pressure, does change during sedimentation/precipitation and an inconsistency appears in the mass and energy budget (see item 2 in Section \ref{subsec:spuriousE}). Similarly, if a `clipper' is used on water vapor or condensates to avoid (unphysical) negative mixing ratios (more details in section \ref{se:pdc_problem}) and this is not accounted for in the thermodynamics or through a surface flux, that `clipping' will produce an energy source. In the dynamical core TE is not conserved locally in each column as there is a horizontal flux of energy between columns; but the local energy budget should, ideally, be closed and thereby globally TE should be conserved. If a dynamical core does not inherently conserve dry air mass and/or water mass then a spurious source of TE is inevitable (unless fixers are applied).}} 
+               
 \subsection{Spurious energy sources and sinks}\label{subsec:spuriousE}
 In a weather/climate model TE conservation errors can appear in many places throughout the algorithm. Below is a general list of where conservation errors can appear with specific examples from CAM:
 \begin{enumerate}
-\item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget. CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
+\item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget {\color{red}{; for example, they may not have been designed to conserve TE or they may conserve a different TE}}. CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
 \item {\em{Pressure work {\color{red}{error}}}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work {\color{red}{error}}}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Continuous TE formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a TE different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a TE that is more accurate and comprehensive than that used in the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design; and should be eliminated in the future.
-\item {\em{Dynamical core errors}}: {\color{red}{[mention that we assume that dynamical core is inherently mass conservative]}}Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
+\item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
 \begin{itemize}
 \item Horizontal inviscid dynamics: Energy errors resulting from solving the inviscid, adiabatic equations of motion.
 \item Hyperviscosity: Filtering errors.
@@ -293,7 +296,7 @@ In a weather/climate model TE conservation errors can appear in many places thro
 
 {\em{Kinetic energy `dribbling' error}}: Similarly, PDC errors in velocity component forcing increments $(\Delta u, \Delta v)$ occur because the dry kinetic energy change of $\Delta M^{(d)}\left[ \left( \Delta u\right)^2+\left( \Delta v\right)^2\right]$ will not match the equivalent dry kinetic energy change when `dribbling' velocity component forcing increments $(\Delta u, \Delta v)$. It is less clear how to eliminate this error as kinetic energy is a quadratic quantity.
 
-{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location, the mass-increment from the parameterizations may be larger than the mass available. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and preocess is described/discussed in detail in Section \ref{sec:noise}. The `clipping' change the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
+{\em{Mass `clipping' (affects all TE terms)}}: A similar PDC error for mass-variables such as vapor vapor forcing, cloud liquid, etc. can occur when the mass-tendencies are `dribbled' during the dynamical core integration. The dynamical core transport of mass variables will move mass around in the horizonal and vertical while the `dribbled' physics mass increments are applied in the same location; in that situation a negative mass-increment from the parameterizations may be larger than the mass available to remove. This can lead to a spurious source mass if there is logic in the dynamical core preventing mixing ratios/mass to become negative. This is referred to as `clipping' PDC errors and preocess is described/discussed in detail in Section \ref{sec:noise}. The `clipping' change the water mass budget without accounting for it in water fluxes or in the thermodynamics and hence lead to a TE conservation errors (both kinetic and thermal energy). }}
 \item {\em{Change of vertical grid/coordinate errors}}: If the vertical coordinates in physics and in the dynamical core are different then there can be spurious PDC energy errors even when using the state-update method for adding tendencies to the dynamical core state. For example, many non-hydrostatic dynamical cores \citep[e.g.][]{MPASatm} use a terrain-following height coordinate whereas physics uses pressure.
 \item {\em{Change of horizontal grid errors:}} If the physics tendencies are computed on a different horizontal grid than the dynamical core then there can be spurious energy errors from mapping tendencies and/or variables between horizontal grids \citep[e.g., ][]{HetAl2018MWR}. 
 \end{itemize}
@@ -309,7 +312,7 @@ By computing the global TE averages $\gi{E}$ at appropriate places in the model 
 
 Before defining the individual terms in detail we briefly review the model time stepping sequence starting with the physics component as illustrated in Figure \ref{fig:dAD}. The energy fixer is applied first to compensate for the spurious net energy change from all components introduced during the previous time step. We will describe this in more detail after the various sources and sinks are elucidated. The parameterizations are applied next and are required to be energy conserving. They update the state and accumulate the total physics tendency (forcing). At this stage the state is saved for use in the energy fixer in the next time step. Any changes in the global average energy after this are spurious and are compensated by the fixer. The parameterizations update the water vapor but not the moist pressure, implying a non-physical change in the dry mass of the atmosphere. The dry mass correction corrects the dry mass back to its proper value.
 
-The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step {\color{red}{than}} the physics and is sub-stepped. The remapped {\color{red}{physics increment}} is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the specified momentum viscosity is calculate locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to Eulerian reference layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
+The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step {\color{red}{than}} the physics and is sub-stepped. The remapped {\color{red}{physics increment}} is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the specified momentum viscosity is {\color{red}{calculated}} locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to Eulerian reference layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
 
 At the end of the dynamics, the state is saved to be used by the dynamics the next time step and is also passed to the physics, with a remapping if the dynamics and physics grids differ. At the beginning of the physics the difference in energy between this state and the state saved after the physics during the previous time step is the amount needed to be added or subtracted by the energy fixer. It represents the accumulation of all spurious sources from the dry mass correction, remappings between physics and dynamics grids (if applicable), dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
 
@@ -433,7 +436,7 @@ If $\partial \gi{E}^{({pdc})}=0$ \eqref{eq:budget_efix} can be used to compute $
 Note that we can not use \eqref{eq:pdc} to compute $\partial \gi{E}^{({discr})}$ since $\gi{E}_{phys}\neq \gi{E}_{dyn}$.
 %
 \begin{sidewaystable}
-  \caption{TE tendencies in units of $W/m^2$ associated with various aspects of CAM-SE run in AMIP-type setup (unless otherwise noted). Column 1 is the identifier for the model configuration. See the text for a brief summary of these descriptors. They are defined in more detail in the following sections where the section titles also include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match Table entries with discussion in the text. Column 2 is $\mathcal{N}=${\tt{qsize\_condensate\_loading}} identifying how many water species are thermodynamically{\color{red}{/inertially}} active in the dynamical core (see section \ref{sec:defE} for details). Column 3, {\tt{lcp\_moist}}, indicates whether or not the heat capacity includes water variables or not and column 4 shows physics-dynamics coupling method {\tt{ftype}}. The TE tendencies $\partial \gi{E}$ in columns 5-14 are defined in section \ref{sec:diagnostics}. If $\partial \gi{E}$ is less than $10^{-5}$ $W/m^2$ it is set to zero in the Table. Significant changes compared to the baseline ({\em{TE consistent}} configuration) discussed in the main text are in bold font.}
+  \caption{TE tendencies in units of $W/m^2$ associated with various aspects of CAM-SE run in AMIP-type setup (unless otherwise noted). Column 1 is the identifier for the model configuration. See the text for a brief summary of these descriptors. They are defined in more detail in the following sections where the section titles also include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match Table entries with discussion in the text. Column 2 is $\mathcal{N}=${\tt{qsize\_condensate\_loading}} identifying how many water species are thermodynamically{\color{red}{/inertially}} active in the dynamical core (see section \ref{sec:defE} for details). Column 3, {\tt{lcp\_moist}}, indicates whether or not the heat capacity includes water variables or not and column 4 shows physics-dynamics coupling method {\tt{ftype}}. The TE tendencies $\partial \gi{E}$ in columns 5-14 are defined in section \ref{sec:diagnostics}. If $\partial \gi{E}$ is less than $10^{-5}$ $W/m^2$ it is set to zero in the Table. Significant changes compared to the baseline ({\em{TE consistent}} configuration) discussed in the main text are in bold font. {\color{red}{Entries marked with `-' refer to TE tendencies that can not be directly calculated with the current framework.}}}
 \label{table:TE}
 \begin{tabular}{c|ccc|ccc|cccccc|c}
 Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{E}_{phys}^{({pwork})}$ &  $\partial \gi{E}_{phys}^{({efix})}$ &  $\partial \gi{E}_{phys}^{({discr})}$ &  $\partial \gi{E}_{dyn}^{({2D})}$ & $\partial \gi{E}_{dyn}^{({hvis})}$ & $\partial \gi{E}_{dyn}^{({fheat})}$ & $\partial \gi{E}_{dyn}^{(res)}$ & $\partial \gi{E}_{dyn}^{(remap)}$ & $\partial \gi{E}_{dyn}^{(adiab)}$  & $\partial \gi{E}^{(pdc)}$\\
@@ -453,7 +456,7 @@ Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{
 %
 {\em{smooth topo}} & 1 & false & 1  &  0.315& {\bf{-0.008}}& 0  & {\bf{-0.295}}& {\bf{-0.300}}  &  0.493& 0.005          & -0.012& {\bf{-0.307}} & 0\\
 {\em{energy discr}} & 5 & true  & 1 &  0.332& -0.313& {\bf{0.594}}& -0.603& -0.612&  0.575& 0.009          & -0.011& -0.614 & -\\
-{\em{default}}      & 5 & true  & 2 &  0.316& -0.272&             & -0.578& -0.587&  0.579& 0.010          & -0.012& -0.589 & -\\ %23 years
+{\em{default}}      & 5 & true  & 2 &  0.316& -0.272&      -      & -0.578& -0.587&  0.579& 0.010          & -0.012& -0.589 & -\\ %23 years
 %{\em{default}}      & 5 & true  & 2 &  0.316& -0.272& {\bf{0.546}}& -0.578& -0.587&  0.579& 0.010          & -0.012& -0.589 & -\\ %23 years
 \hline
 {\em{QPC6}}         & 1 & false & 1 &  0.305& -0.169& 0    &{\bf{-0.129}}& {\bf{-0.131}}&  0.477& 0.001 & -0.007& {\bf{-0.136}} & 0\\
@@ -489,7 +492,7 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
  \begin{figure}[h]
  \centering
  \includegraphics[width=35pc]{dEdt.pdf}
- \caption{Monthly averaged TE tendencies as a function of time for various aspects of the TE consistent configuration of CAM-SE run in AMIP-type configuration with perpetual year 2000 SSTs. Left Figure shows $\partial \gi{E}$ TE tendencies in physics and, for comparison, TE tendency for the adiabatic dynamical core. The right plot shows the break-down of $\partial \gi{E}$ for the dynamical core. These plots show that the energy tendency from the dynamical core is quite constant (to within $\sim 0.02W/m^2$ or less) so only one month simulations is adequate to assess energy diagnostics for the dynamical core. For more details see Section \ref{sec:consistent}.}
+ \caption{Monthly averaged TE tendencies as a function of time for various aspects of the TE consistent configuration of CAM-SE run in AMIP-type configuration with perpetual year 2000 SSTs. Left Figure shows $\partial \gi{E}$ TE tendencies in physics and, for comparison, TE tendency for the adiabatic dynamical core. The right plot shows the {\color{red}{breakdown}} of $\partial \gi{E}$ for the dynamical core. These plots show that the energy tendency from the dynamical core is quite constant (to within $\sim 0.02W/m^2$ or less) so only one month simulations is adequate to assess energy diagnostics for the dynamical core. For more details see Section \ref{sec:consistent}.}
  \label{fig:dEdt(t)}
   \end{figure}
 
@@ -553,7 +556,7 @@ By running the model in aqua-planet configuration one can assess the effect of s
 \subsection{{\em{FHS94}}: Simplified physics (no moisture)}\label{sec:FHS94}
 Simplifying the setup even further by replacing the parameterizations with relaxation towards a zonally symmetric temperature profile and simple boundary layer friction (Held-Suarez forcing) as well as excluding moisture, the TE errors in the dynamical core decreases even further to $\sim 0.002W/m^2$ since there is no small scale forcing. Small scales are only created by the nonlinear dynamics and the physics works to damp them. Hyperviscosity is less active leading to significant reductions compared to aqua-planet and `real-world' simulation results. The TE diffusion in vertical remapping reduces by an order of magnitude compared to the aqua-planet simulations ($\sim 0.0005W/m^2$). This further emphasizes that TE diffusion assessment in a simplified setup is not necessarily telling for the dynamical cores performance with moist physics and topography that challenge the dynamical core in terms of strong grid-scale forcing.
 \subsection{{\em{FV}}: Changing dynamical core to Finite-Volume (FV)}\label{sec:cam-fv}
-As a comparison the TE error characteristics of the CAM-FV dynamical core are assessed. Although the TE diagnostics have not been implemented in the CAM-FV dynamical core, the TE diagnostics in CAM physics are independent of dynamical core and can therefore be activated with CAM-FV. The CAM-FV dynamical core uses {\em{state-update}} physics-dynamics coupling ({\tt{ftype=1}}) ($\partial \gi{E}^{(pdc)}=0$) and the same TE definition as CAM physics ($\partial \gi{E}^{(discr)}=0$). Hence \eqref{eq:pdc2} can be used to compute the TE errors of the CAM-FV dynamical core, $\partial \gi{E}^{(adiab)}_{dyn}\approx -1 W/m^2$. As we do not have the break-down of $\partial \gi{E}^{(adiab)}_{dyn}$ it can not be determined how much of the TE errors are due to the vertical remapping. Furthermore, CAM-FV contains intrinsic dissipation operators (limiters in the flux operators) making it difficult to assess TE sources/sinks due to dissipation. Note that the pressure work {\color{red}{error}} even with a change of dynamical core remains approximately the same as the CAM-SE configurations.
+As a comparison the TE error characteristics of the CAM-FV dynamical core are assessed. Although the TE diagnostics have not been implemented in the CAM-FV dynamical core, the TE diagnostics in CAM physics are independent of dynamical core and can therefore be activated with CAM-FV. The CAM-FV dynamical core uses {\em{state-update}} physics-dynamics coupling ({\tt{ftype=1}}) ($\partial \gi{E}^{(pdc)}=0$) and the same TE definition as CAM physics ($\partial \gi{E}^{(discr)}=0$). Hence \eqref{eq:pdc2} can be used to compute the TE errors of the CAM-FV dynamical core, $\partial \gi{E}^{(adiab)}_{dyn}\approx -1 W/m^2$. As we do not have the {\color{red}{breakdown}} of $\partial \gi{E}^{(adiab)}_{dyn}$ it can not be determined how much of the TE errors are due to the vertical remapping. Furthermore, CAM-FV contains intrinsic dissipation operators (limiters in the flux operators) making it difficult to assess TE sources/sinks due to dissipation. Note that the pressure work {\color{red}{error}} even with a change of dynamical core remains approximately the same as the CAM-SE configurations.
 \subsection{{\em{CSLAM}}: Quasi equal-area physics grid}\label{sec:cslam}
 This configuration was discussed in the context of element noise in section \ref{sec:noise}. By averaging the dynamics state of an equal-partitioning (in central angle cubed-sphere coordinates) of the elements, the element-boundary noise found in CAM-SE can be removed. \cite{LetAl2018JAMES} argue that this way of computing the state for the physics is more consistent with physics in terms of providing a cell-averaged state instead of irregularly spaced point (quadrature) values. In order to achieve a closed mass-budget, this configuration uses CSLAM for tracer transport rather than SE transport. That said, the physics columns no longer coincide with the quadrature grid and there are TE errors associated with mapping state and tendencies between the two grids.
 
